Login Checkout Improvements

--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Basic meta -->
   <meta charset="utf-8">
@@ -8,56 +9,63 @@
   <title>Log in & Checkout</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
+    rel="stylesheet">
 
   <!-- Page-specific stylesheet -->
   <link href="../styles/log-in-checkout.css" rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-W9CSNHSLQQ');
-</script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    gtag('config', 'G-W9CSNHSLQQ');
+  </script>
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "rmf0p7sik4");
-</script>
-<!-- TikTok Pixel Code Start -->
-<script>
-!function (w, d, t) {
-  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie","holdConsent","revokeConsent","grantConsent"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(
-var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var r="https://analytics.tiktok.com/i18n/pixel/events.js",o=n&&n.partner;ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=r,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script")
-;n.type="text/javascript",n.async=!0,n.src=r+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
+  </script>
+  <!-- TikTok Pixel Code Start -->
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
+        for (
+          var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
+      }, ttq.load = function (e, n) {
+        var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
+          ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
+      };
 
 
-  ttq.load('D0M3KORC77UCAFR1EOLG');
-  ttq.page();
-}(window, document, 'ttq');
-</script>
-<!-- TikTok Pixel Code End -->
- <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1217477006533345');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+      ttq.load('D0M3KORC77UCAFR1EOLG');
+      ttq.page();
+    }(window, document, 'ttq');
+  </script>
+  <!-- TikTok Pixel Code End -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1217477006533345');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
@@ -70,6 +78,13 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     </div>
     <!-- (optional dark-mode toggle lives here) -->
   </header>
+  <div class="timer-container" id="timerContainer">
+    <div class="timer-text">
+      <span class="discount-label">Discount Expires In:</span>
+      <span class="time-remaining" id="countdownTimer">10:00</span>
+    </div>
+    <p class="first-1000">🔥 1,000+ people unlocked their plan this week.<br>You're next.</p>
+  </div>
 
   <!-- ─── MAIN CONTENT ─────────────────────────────────────────────────────── -->
   <main class="login-container">
@@ -79,40 +94,47 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
       <h2 style="text-align: center;">Just One More Step</h2>
       <p class="subheading">
-        Log in, review your order and complete payment - all in one quick step.
+        You're 90% done. Log in to confirm your order and unlock your plan instantly.
       </p>
 
       <form id="loginCheckoutForm" novalidate>
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email"
-                 id="email"
-                 name="email"
-                 placeholder="you@example.com"
-                 required
-                 aria-describedby="email-error">
+          <input type="email" id="email" name="email" placeholder="you@example.com" required
+            aria-describedby="email-error" autocomplete="username">
           <span class="error-message" id="email-error" role="alert"></span>
         </div>
 
         <div class="input-group">
           <label for="password">Password</label>
-          <input type="password"
-                 id="password"
-                 name="password"
-                 placeholder="Enter your password"
-                 required
-                 aria-describedby="password-error">
+          <input type="password" id="password" name="password" placeholder="Enter your password" required
+            aria-describedby="password-error" autocomplete="current-password">
           <span class="error-message" id="password-error" role="alert"></span>
         </div>
 
         <button type="submit" class="login-btn" id="paySubmitBtn">Claim My Program</button>
+        <div class="what-to-expect-box">
+          <h4>What Happens After Payment?</h4>
+          <div class="expect-grid">
+            <div class="expect-item">✅ Plan unlocks instantly</div>
+            <div class="expect-item">✅ Adaptive workouts + meals</div>
+            <div class="expect-item">✅ Track your real progress</div>
+            <div class="expect-item">✅ Cancel anytime — no stress</div>
+          </div>
+          <a href="#compare-plans" id="comparePlansLink" class="compare-pill">
+            👀 See everything you unlock
+          </a>
+        </div>
+        <p class="trust-line">
+          🔒 Secure payment via Stripe. Cancel anytime.
+        </p>
       </form>
 
       <p class="terms">
         By proceeding you agree to our
         <a href="tos.html" target="_blank" rel="noopener">Terms of Service</a> &
-        <a href="privacy-policy.html"   target="_blank" rel="noopener">Privacy Policy</a>.
-        Subscription renews unless cancelled.
+        <a href="privacy-policy.html" target="_blank" rel="noopener">Privacy Policy</a>.
+        You’ll be billed monthly unless you cancel — no contracts, no stress.
       </p>
 
       <p class="signup-link">
@@ -120,6 +142,60 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       </p>
     </div>
   </main>
+
+  <section class="youtube-prompt-section">
+    <h3>See It In Action</h3>
+    <p class="trust-line">
+      Watch how it works — in under 60 seconds.
+    </p>
+    <div class="youtube-video-container" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
+      <div id="youtube-placeholder" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer;
+             background: url('https://img.youtube.com/vi/zCMqX9A8hmQ/hqdefault.jpg') center center / cover no-repeat;">
+        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+               background-color: rgba(0,0,0,0.6); border-radius: 50%; padding: 12px;">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8 5v14l11-7z" />
+          </svg>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const placeholder = document.getElementById("youtube-placeholder");
+        placeholder.addEventListener("click", function () {
+          const iframe = document.createElement("iframe");
+          iframe.setAttribute("src", "https://www.youtube.com/embed/zCMqX9A8hmQ?autoplay=1");
+          iframe.setAttribute("frameborder", "0");
+          iframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture");
+          iframe.setAttribute("allowfullscreen", "");
+          iframe.style.cssText = `
+          position: absolute;
+          top: 0; left: 0;
+          width: 100%; height: 100%;
+        `;
+          placeholder.replaceWith(iframe);
+        });
+      });
+    </script>
+  </section>
+
+  <div class="testimonial-section">
+    <h2>See What Happens When Everything Connects</h2>
+    <p class="hero-text">
+      Progress from real people, using the same system you're about to unlock.
+    </p>
+
+    <div class="testimonial-container">
+      <button class="arrow-button prev">❮</button>
+      <div class="testimonial-slider">
+      </div>
+
+      <button class="arrow-button next">❯</button>
+    </div>
+  </div>
+
+  <div class="dots-container "></div>
 
   <!-- ─── FOOTER ───────────────────────────────────────────────────────────── -->
   <footer class="footer fade-in" id="footer">
@@ -147,6 +223,88 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       </div>
     </div>
   </footer>
+  <div id="compareModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+
+      <h2>Everything You Unlock with Pro</h2>
+      <p class="subtext">Here's what you unlock when using our Pro Tracker.</p>
+
+      <div class="table-wrapper">
+        <table class="compare-table">
+          <colgroup>
+            <col class="col-feature">
+            <col class="col-ct">
+            <col class="col-pt">
+          </colgroup>
+          <thead>
+            <tr>
+              <th>Feature</th>
+              <th>Most Apps</th>
+              <th>Pro Tracker</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Workout Logging</td>
+              <td>✅</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Adaptive Progression</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Progress Score</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>My Progress (Trends &amp; Insights)</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Coach Feedback &amp; Weekly Insights</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Nutrition Tracker</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Macro-Matched Meals</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Meal Prep Mode &amp; Shopping List</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>XP Bonuses &amp; Weekly Recaps</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Video Tutorials</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <p class="testimonial">
+        “I didn’t realize how much I was missing until I unlocked Pro Tracker. It made everything click.”<br>
+        – Alice, lost 7 kg with Pro
+      </p>
+    </div>
+  </div>
 
   <!-- Stripe.js (only loads when your key is set server-side) -->
   <script src="https://js.stripe.com/v3/"></script>
@@ -154,4 +312,5 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
   <!-- Page logic -->
   <script type="module" src="../scripts/log-in-checkout.js"></script>
 </body>
+
 </html>
