Offer Page Improvements (Modal)

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -404,10 +404,10 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the <strong>Pro Tracker</strong>, it renews at £29.99/month unless cancelled. Cancellations take
+        If you choose the Pro Tracker, it renews at £29.99/month unless cancelled. Cancellations take
         effect at the end of the current billing cycle.
       </p>
-
+ 
   </section>
 
   <!-- FAQ Section -->
@@ -604,6 +604,44 @@
       </p>
     </div>
   </div>
+
+  <div id="valueModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+
+      <h2>✨ Your custom plan is ready — here’s how it works</h2>
+
+      <p class="subtext">
+        <strong>Most plans fail because they’re too rigid.</strong><br>
+        This one changes with you — based on your real results.
+      </p>
+
+      <ul class="feature-list">
+        <li>✓ Miss a workout? Your plan adjusts.</li>
+        <li>✓ Meals not working? Swap them with 1 click.</li>
+        <li>✓ Track progress — XP, streaks, graphs & more.</li>
+      </ul>
+
+      <p class="note">
+        💡 This isn’t a fixed plan. It’s a <strong>smart tracker</strong> that keeps you moving forward.
+      </p>
+
+      <div class="modal-actions">
+        <button id="valueContinue" class="primary-btn">Continue</button>
+        <a id="valueDemo" href="https://www.youtube.com/watch?v=zCMqX9A8hmQ" target="_blank" rel="noopener"
+          class="secondary-btn">
+          Watch&nbsp;Demo
+        </a>
+      </div>
+      <p class="urgency-note">
+        ⏱️ <strong>Claim your plan before the discount ends.</strong>
+      </p>
+      <!-- <p class="skip-link">
+        <a href="#" id="valueSkip">No thanks, just take me to the plan</a>
+      </p> -->
+    </div>
+  </div>
+
   <script>
     let scrollTracked = false;
 
