--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -70,14 +70,13 @@
 
 <body>
   <!-- ─── HEADER ───────────────────────────────────────────────────────────── -->
-  <header class="header">
+  <!-- <header class="header">
     <div class="logo">
       <a href="../index.html">
         <img id="logo" class="fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
-    <!-- (optional dark-mode toggle lives here) -->
-  </header>
+  </header> -->
   <div class="timer-container" id="timerContainer">
     <div class="timer-text">
       <span class="discount-label">Discount Expires In:</span>
