Updated Copy in Login Checkout

--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -93,7 +93,7 @@
 
       <h2 style="text-align: center;">Just One More Step</h2>
       <p class="subheading">
-        You're 90% done. Log in to confirm your order and unlock your plan instantly.
+        <strong>You're 90% done</strong>. Log in to confirm your order and unlock your plan instantly.
       </p>
 
       <form id="loginCheckoutForm" novalidate>
