Brevo Tracking Integration

--- a/client/pages/kickstart-guide.html
+++ b/client/pages/kickstart-guide.html
@@ -14,6 +14,18 @@
 
   <!-- FontAwesome for Lock Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://cdn.brevo.com/js/sdk-loader.js" async></script>
+<script>
+    // Version: 2.0
+    window.Brevo = window.Brevo || [];
+    Brevo.push([
+        "init",
+        {
+        client_key: "k4unlo92c1oknv6qc7vmxk1o",
+        // Optional: Add other initialization options, see documentation
+        }
+    ]);
+</script>
 </head>
 
 <body>
