--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -63,6 +63,18 @@
     fbq('init', '1217477006533345');
     fbq('track', 'PageView');
   </script>
+  <script src="https://cdn.brevo.com/js/sdk-loader.js" async></script>
+<script>
+    // Version: 2.0
+    window.Brevo = window.Brevo || [];
+    Brevo.push([
+        "init",
+        {
+        client_key: "k4unlo92c1oknv6qc7vmxk1o",
+        // Optional: Add other initialization options, see documentation
+        }
+    ]);
+</script>
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
