Removed Signup Link

--- a/old/4-week-program.html
+++ b/old/4-week-program.html
@@ -22,7 +22,7 @@
 <body>
 
   <h1>4-Week Program Demo</h1>
-  <p>Click below to generate and download your two PDFs: Workouts & Nutrition. Hi</p>
+  <p>Click below to generate and download your two PDFs: Workouts & Nutrition.</p>
 
   <!-- Single button that triggers both PDF downloads -->
   <button id="download4WeekBtn" class="buttons">Download 4-Week Program</button>
