--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -148,9 +148,9 @@
         You’ll be billed monthly unless you cancel — no contracts, no stress.
       </p>
 
-      <p class="signup-link">
+      <!-- <p class="signup-link">
         New here? <a href="sign-up-checkout.html">Create an account</a>
-      </p>
+      </p> -->
     </div>
   </main>
 
