Updated Finish Button Color

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -58,17 +58,17 @@
     fbq('track', 'PageView');
   </script>
   <script src="https://cdn.brevo.com/js/sdk-loader.js" async></script>
-<script>
+  <script>
     // Version: 2.0
     window.Brevo = window.Brevo || [];
     Brevo.push([
-        "init",
-        {
+      "init",
+      {
         client_key: "k4unlo92c1oknv6qc7vmxk1o",
         // Optional: Add other initialization options, see documentation
-        }
+      }
     ]);
-</script>
+  </script>
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
@@ -405,7 +405,9 @@
 
       <!-- FINISH BUTTON -->
       <div class="offer-finish">
-        <button class="finish-btn" id="offerFinishBtn">Continue</button>
+        <button class="finish-btn" id="offerFinishBtn">
+          Continue
+        </button>
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
@@ -419,7 +421,7 @@
         If you choose the Pro Tracker, it renews at £19.99/month unless cancelled. Cancellations take
         effect at the end of the current billing cycle.
       </p>
- 
+
   </section>
 
   <!-- FAQ Section -->
