--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -1,6 +1,26 @@
 <!doctype html>
 <html lang="en">
-
+<script>
+  (async function() {
+    const token = localStorage.getItem('token');
+    if (!token) {
+      location.href = 'log-in-offer.html';
+      return;
+    }
+    try {
+      const res = await fetch('/api/auth/me', {
+        method: 'GET',
+        headers: { 'Authorization': `Bearer ${token}` }
+      });
+      if (!res.ok) throw new Error();
+    } catch (err) {
+      localStorage.removeItem('token');
+      location.href = 'log-in-offer.html';
+      return;
+    }
+    // If we get here, user is authenticated → do nothing
+  })();
+</script>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
