Updated MongoDB env

--- a/client/index2.html
+++ b/client/index2.html
@@ -35,7 +35,7 @@
     <li><a href="pages/refund-policy.html">Refund Policy</a></li>
     <li><a href="pages/sign-up.html">Sign Up</a></li>
     <li><a href="pages/tos.html">Terms of Service</a></li>
-    <li><a href="pages/workout-tracker.html">Workout Tracker</a></li>
+    <li><a href="pages/workout-tracker.html">Workout Tracker Hi</a></li>
   </ul>  
 </body>
 </html>
