--- a/client/pages/log-in-offer.html
+++ b/client/pages/log-in-offer.html
@@ -87,9 +87,9 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         </div>
         <button type="submit" class="login-btn">Continue</button>
 
-        <div class="signup-link">
+        <!-- <div class="signup-link">
           <p>Don't have an account? <a href="sign-up.html">Sign up</a></p>
-        </div>
+        </div> -->
     </div>
   </div>
 
