Offer Page Improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -401,9 +401,9 @@
       <div class="offer-card offer-special" data-program="new">
         <div class="offer-left">
           <div class="duration"><strong>Pro Tracker</strong></div>
-          <div class="full-price" data-full-price="£19.99">
-            <span class="price-strikethrough" id="priceSpecialFull">£19.99</span>
-            <span class="discount-price" id="priceSpecialDiscount">£9.99</span>
+          <div class="full-price" data-full-price="£29.99">
+            <span class="price-strikethrough" id="priceSpecialFull">£29.99</span>
+            <span class="discount-price" id="priceSpecialDiscount">£0.99</span>
           </div>
           <div class="best-seller-banner">
             <strong><span class="crown-emoji">👑</span> <span class="banner-text">BEST VALUE</span></strong>
@@ -453,7 +453,7 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the Pro Tracker, it renews at £19.99/month unless cancelled. Cancellations take
+        If you choose the Pro Tracker, it renews at £29.99/month unless cancelled. Cancellations take
         effect at the end of the current billing cycle.
       </p>
 
@@ -472,6 +472,10 @@
   <section id="loadingSection" class="loading-section" style="display: none;">
     <p id="loadingText">Loading...</p>
   </section>
+
+  <div class="payment-wrapper">
+  <!-- this is the overlay rectangle -->
+  <div class="payment-overlay"></div>
 
   <section id="paymentSection" class="payment-section" style="display:none">
     <form id="paymentForm">
