Set Pro Tracker Always

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -486,6 +486,16 @@
       <button id="paySubmitBtn" class="pay-btn" type="submit">
         🔒 Pay
       </button>
+       <p id="loadingIndicator"
+       style="
+         display: none;
+         text-align: center;
+         margin-top: 12px;
+         font-weight: 500;
+         color: #333;
+       ">
+      Loading
+    </p>
       <p id="postPayNote" class="post-pay-note"
         style="display:none; text-align:center; margin-top:12px; color:#2a7f2a; font-weight:500;">
         ✅ After payment, your 12-week program is unlocked immediately. You'll be taken straight to your dashboard to get
